# charms-bro-nonce

./: .gitignore  Cargo.toml  Dockerfile  GPU_OPTIMIZATION.md  GPU_OPTIMIZATION_GUIDE.md  OPTIMIZATION_GUIDE.md  PERFORMANCE_TUNING.md  README.md  RTX5090_GUIDE.md  SERVER_TEST_GUIDE.md  aggressive_test.sh  algorithm_alternatives.md  benchmark.sh  build_cubin_ada.sh  deploy_and_test.sh  diagnose.sh  extreme_optimize.sh  final_solution.sh  logs.sh  optimal_test.sh  optimize_4090.sh  param_scan.sh  perf_test.sh  restart.sh  restore_performance.sh  restore_test.sh  run_optimized.sh  server_test.sh  sha256_kernel.cu  sha256_kernel_fixed.cu  sha256_kernel_optimized.cu  sha256_kernel_optimized_final.cu  sha256_kernel_optimized_v2.cu  sha256_kernel_original.cu  sha256_kernel_ultra.cu  start.sh  status.sh  stop.sh  test_optimized.sh
fpga/: README.md  build.sh
fpga/kernels/: double_sha256.cl
gpu/: Cargo.toml  build.rs  kernel.cu
gpu/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: cuda_backend.rs  fpga_backend.rs  lib.rs  main.rs
