[package]
name = "bro"
version = "0.1.0"
edition = "2021"

[features]
default = ["cuda"]
cuda = ["dep:rustacuda"]
fpga = ["dep:opencl3"]

[dependencies]
rustacuda = { version = "0.1.3", optional = true }
opencl3 = { version = "0.9", optional = true }
axum = "0.8.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
