[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
default = ["gpu_stub"]
gpu_stub = ["gpu/stub"]
gpu_cuda = ["gpu/cuda"]

[dependencies]
axum = "0.8.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
anyhow = "1"
gpu = { path = "../gpu", default-features = false }
